🆕 настроил алиасы путей файлов

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,17 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@assets/*": ["src/assets/*"],
+      "@views/*": ["src/views/*"],
+      "@components/*": ["src/components/*"],
+      "@services/*": ["src/services/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@models/*": ["src/models/*"],
+      "@styles/*": ["src/styles/*"]
+    },
 
     /* Linting */
     "strict": true,
