--- a/.prettierrc
+++ b/.prettierrc
@@ -8,5 +8,6 @@
   "bracketSameLine": false,
   "arrowParens": "always",
   "printWidth": 80,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "jsxSingleQuote": true
 }
