--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "classnames": "^2.3.2",
+    "classnames-generics": "^1.0.9",
     "ky": "^0.33.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,6 +32,7 @@
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-plugin-sass-dts": "^1.3.5"
   }
 }
